versions/1.10/docs/fr24-icon-interaction-spec-v1.1.md
# 1.1 Icon Interaction Specification

## 1. 文档定位

本规范用于 `Global BizJet Ops 1.1` 的地图 icon、工具 icon、面板 icon 与选中反馈设计。产品目标是让全球公务机运行数据系统在交互节奏、视觉层级、飞机图标形态和比例尺表现上尽量与 Flightradar24 类实时航班地图保持一致。实现上分为两种模式：已取得正式素材授权时接入授权图标资产；未取得授权时按同等视觉规范重绘自有图标，不直接复制第三方 SVG 路径、位图、商标或专有资源。

观察时间：2026-07-29。  
观察范围：Flightradar24 公共主页可见地图、顶部搜索/账户/菜单入口、地图标记视觉；用户提供的参考截图；当前项目 1.1 代码中的 Google Maps + Advanced Marker 实现。  
限制说明：自动化访问看到的是公共可见界面，未读取会员账户隐私、会话数据或专有资源包。Gold 会员账户可用于观察界面参考，但不等同于图标资产再发布授权。本文输出的是可落地交互视觉规范和授权接入要求，不是第三方资产清单。

## 2. 设计原则

1. 地图是主界面，所有 icon 必须服务于地图读取，不抢占地图层级。
2. 飞机 icon 是最高优先级地图符号，必须在浅色陆地、蓝绿色海面、灰度遮罩上都清晰。
3. 机场 icon 是第二优先级地图符号，密度低于飞机，默认弱于飞机，选中后可提升到同等层级。
4. 工具 icon 使用线性白色图标，不使用复杂插画；功能状态通过背景、描边、黄色高亮和面板开合表达。
5. 所有选中状态必须有唯一颜色，不能只靠阴影或尺寸区分。
6. icon 必须跟随地图经纬度锁定，不允许在 Google Maps 模式使用独立绝对定位层模拟坐标。
7. 遮罩层只能作用于底图，不能覆盖飞机、机场、标签、路线和面板。

## 3. 地图图层顺序

从底到顶：

1. Google Maps 底图。
2. 地图灰度/暗色对比遮罩，透明度控制在 10% 到 15%。
3. 天气、云图、雷达等非交互覆盖层。
4. 航迹线、选中航线、航班路径。
5. 机场 marker。
6. 飞机 marker。
7. marker 文本标签。
8. 左侧详情面板、搜索结果、过滤面板、底部工具栏、右侧菜单。

实现约束：

- Google Maps 模式必须使用 `AdvancedMarkerElement` 或同等级地图原生 marker 能力。
- 飞机/机场 icon 坐标必须由地图引擎管理，支持拖拽、缩放、旋转、窗口变化时自动跟随。
- 选中的 marker 使用更高 `z-index`，保证不会被普通 marker 或标签遮挡。

## 4. 核心视觉 Token

| Token | 建议值 | 用途 |
| --- | --- | --- |
| Aircraft yellow | `#ffd21c` | 默认飞机主体、主高亮 |
| Aircraft yellow deep | `#f0b400` | hover/边缘高光辅助 |
| Selected red | `#ff4b32` | 选中飞机、选中机场、选中航迹 |
| Panel black | `#161616` | 顶部 tab、深色控制底 |
| Panel base | `#252525` | 左侧详情、过滤面板、列表 |
| Label bg | `rgba(21,21,21,0.78-0.88)` | 飞机/机场标签底 |
| Map mask | `rgba(24,55,58,0.10-0.15)` | 底图灰度对比遮罩 |
| White stroke | `rgba(255,255,255,0.92-0.96)` | 选中描边、机场内环 |
| Dark stroke | `rgba(16,16,16,0.86)` | 默认飞机描边 |
| Shadow | `rgba(0,0,0,0.35-0.62)` | marker 与面板阴影 |

## 5. 飞机 Marker 规范

> 版本覆盖说明：本节涉及飞机“局部椭圆阴影、drop-shadow、hover 阴影增强、selected 彩色外发光”的规则已被 `docs/aircraft-ground-shadow-projection-requirements-v1.7.md` 覆盖。1.7 起飞机主体只保留轮廓描边，低空阴影由独立地面投影层绘制；机场与其他 UI 阴影不受影响。

### 5.0 Flightradar24 飞机图标复刻边界

产品要求：

- 飞机 icon 的视觉语言、颜色、朝向、尺寸变化、选中反馈需要与 Flightradar24 保持同屏一致。
- 不同机型需要通过 `aircraftTypeCode` 对应到明确的图标键；当前 Business Jet 样例按规范统一映射到 `lj45` 公务机图标键，尺寸差异由 `sizeClass` 控制。
- 地图在不同 zoom 比例尺下，飞机 icon 的屏幕尺寸、标签显隐、点击热区需要按 Flightradar24 的表现校准。

资产接入模式：

| 模式 | 使用条件 | 实现要求 |
| --- | --- | --- |
| `licensed-fr24-assets` | 已取得 Flightradar24 或权利方对图标资产的明确书面授权 | 可接入授权 SVG/PNG/WebP 资产；必须记录授权来源、使用范围、文件 checksum 和版本 |
| `custom-equivalent-assets` | 未取得正式素材授权 | 由本项目重绘俯视飞机轮廓，匹配 Flightradar24 的视觉比例、颜色、尺寸与状态，不复制第三方源文件 |

工程默认采用 `custom-equivalent-assets`。如果后续提供正式授权素材包，再切换为 `licensed-fr24-assets`。

### 5.1 默认形态

- 类型：俯视飞机剪影；若有授权资产，使用授权图标；否则使用自有重绘等效图标。
- 朝向：按照航向角实时旋转，机头指向飞行方向。
- 主色：黄色。
- 描边：深色细描边，保证在浅色陆地上可读。
- 阴影：局部椭圆阴影 + drop-shadow，位于飞机图形下方。
- 点击热区：桌面和触屏不少于 `64 x 64px`，视觉主体可小于热区。
- 标签：默认显示 callsign，位于飞机右侧偏中位置，深色矩形小标签。

中 zoom 基准尺寸：

| 飞机类型 | 视觉主体尺寸 | 热区尺寸 | 使用场景 |
| --- | --- | --- | --- |
| Light jet | 22px | 44px | PC-24、Citation 小型机 |
| Midsize | 24px | 44px | Citation Longitude、Challenger 300/350 |
| Super midsize | 26px | 44px | Praetor 600、Challenger 350/650 |
| Long range | 28px | 44px | Falcon 7X/8X、Gulfstream G500/G550 |
| Ultra long | 30px | 44px | Gulfstream G650、Global 6000/7500 |

### 5.2 机型区分

不同飞机类型只允许通过图标键、轮廓、尺寸、机翼比例、机身长度、翼尖/尾翼形态和标签信息区分，不引入额外颜色体系。颜色越多会削弱实时地图的扫描效率。

推荐分类：

| 分类 | 轮廓特征 | 典型机型 | 视觉重点 |
| --- | --- | --- | --- |
| `light` | 短机身、窄翼展、小尾翼、机鼻短 | PC-24、Citation CJ/Latitude | 小而清晰，机翼不夸张 |
| `midsize` | 中等机身、轻微后掠翼、尾翼更明显 | Citation Longitude、Learjet、Challenger 300 | 与 light 拉开 2px 左右 |
| `super-midsize` | 机身更长、翼展更宽、后掠感更强 | Praetor 600、Challenger 350/650 | 轮廓介于 midsize 与 long-range |
| `long-range` | 长机身、宽翼展、尾翼和翼尖更醒目 | Falcon 7X/8X、Gulfstream G500/G550 | 远程公务机主力样式 |
| `ultra-long` | 最长机身、最大翼展、翼尖细节明显 | Global 6000/7500、Gulfstream G650/G700 | 地图上最大公务机轮廓 |

映射规则：

- 数据层必须维护 `aircraftTypeCode`、`manufacturer`、`model`、`sizeClass`、`fr24IconKey`。
- 渲染层读取 `fr24IconKey`、`sizeClass` 与 `heading`，不要在 marker 组件里硬编码机型判断。
- 当前 Business Jet 样例映射为 `GLF6/GL7T/FA8X/C700/GLF5/GLEX/E550/PC24/CL35/FA7X/GA5C -> lj45`。
- 未识别 Business Jet 机型默认落入 `lj45` 图标键和 `midsize` 尺寸，并在数据质量日志中记录。
- 同一比例尺下，相邻 `sizeClass` 尺寸差建议 `2px`，图标键优先于颜色差异。

### 5.3 比例尺尺寸矩阵

飞机 icon 尺寸使用屏幕像素，不使用真实机身米数缩放。地图可以无级缩放，但 icon 尺寸按 zoom 区间插值或阶梯切换，目标是在同屏视觉上接近 Flightradar24。

| Google Maps zoom | 地图视图 | Light | Midsize | Super midsize | Long range | Ultra long | 标签规则 |
| --- | --- | ---: | ---: | ---: | ---: | ---: | --- |
| `2.0-2.9` | 全球 | 20px | 22px | 24px | 26px | 28px | 默认隐藏，仅 selected/hover 显示 |
| `3.0-3.9` | 洲际 | 22px | 25px | 27px | 29px | 31px | 高密度隐藏，selected 显示 |
| `4.0-4.9` | 大区 | 25px | 28px | 31px | 33px | 35px | selected/hover 显示，低密度可显示 |
| `5.0-5.9` | 国家/航路 | 28px | 32px | 35px | 38px | 40px | 可显示主要 callsign |
| `6.0-6.9` | 区域 | 31px | 35px | 38px | 41px | 44px | 默认显示，拥挤区域隐藏 |
| `7.0-8.9` | 城市群 | 33px | 38px | 42px | 45px | 48px | 默认显示，hover 提升层级 |
| `9.0-12.0` | 机场/城市 | 35px | 40px | 45px | 48px | 52px | 默认显示，selected 标签红底 |

选中状态尺寸：

- 视觉主体在当前 zoom 尺寸基础上增加 `3px`，上限 `56px`。
- 点击热区不随视觉主体缩小，始终不少于 `64px`。
- 移动端视觉主体保持同一矩阵，热区仍保持 `64px`。

校准方法：

- 在 `1920 x 1080` 与 `1440 x 900` 两个桌面视口截图对比。
- 分别在 zoom `2.5`、`4.5`、`6.5`、`8.5`、`10.5` 抽样测量 10 个普通飞机、3 个选中飞机。
- 与 Flightradar24 参考截图的 icon 外接矩形误差控制在 `±2px`。
- 选中颜色、标签位置和航迹宽度通过截图叠加校验，视觉差异超过 `8%` 需要返工。

### 5.4 Hover 状态

- 鼠标进入热区后，飞机提高亮度，阴影略增强。
- 标签保持可见；如当前处于标签关闭模式，只在 hover 时临时显示标签。
- 不改变地图中心，不打开面板。
- 过渡时长建议 `100-140ms`，避免拖动地图时出现拖影。

### 5.5 Selected 状态

- 飞机主体切换为红橙色。
- 描边切换为接近白色。
- 阴影加入红色外发光，层级提升到所有普通飞机上方。
- 航迹线同步切换为红橙色实线或更强不透明度。
- 左侧详情面板打开，展示航班信息。
- 再点击其他飞机，当前选中状态转移；关闭详情面板时清空选中。

### 5.6 密度与缩放

- 全球低 zoom：保留飞机主体，不强制显示全部 labels。
- 区域中 zoom：显示主要 callsign 标签，航迹线可见。
- 机场/城市高 zoom：显示更多标签、选中航迹、机场点。
- 大量飞机聚集时优先隐藏标签，而不是缩小飞机到不可辨识。
- V1.1 静态数据量较小，不做聚合；未来高密度数据应进入 Canvas/WebGL 渲染。

### 5.7 资产文件规范

若使用授权资产，文件组织建议：

```text
assets/
  aircraft-icons/
    licensed-fr24/
      light.svg
      midsize.svg
      super-midsize.svg
      long-range.svg
      ultra-long.svg
      manifest.json
    custom-equivalent/
      light.svg
      midsize.svg
      super-midsize.svg
      long-range.svg
      ultra-long.svg
      manifest.json
```

`manifest.json` 必须记录：

- `sourceMode`: `licensed-fr24-assets` 或 `custom-equivalent-assets`。
- `license`: 授权说明；自有图标则写 `owned-custom`.
- `sourceVersion`: 图标来源版本或设计版本。
- `sizeClass`: 对应 `light`、`midsize`、`super-midsize`、`long-range`、`ultra-long`。
- `viewBox`: 统一建议 `0 0 64 64`。
- `anchor`: 默认 `{ "x": 32, "y": 32 }`，以图标中心为地图坐标锚点。
- `strokePolicy`: 默认深色描边，selected 可切白色描边。

## 6. 机场 Marker 规范

### 6.1 默认形态

- 类型：圆点/环形机场点，不使用复杂航站楼插画。
- 主体：蓝色圆点。
- 描边：白色内环或外环。
- 阴影：小范围暗色投影。
- 标签：机场 ICAO 或 IATA 代码，默认在点位下方，深色底。
- 热区：不少于 `34 x 34px`。

建议值：

| 元素 | 建议值 |
| --- | --- |
| 热区 | 34px |
| 圆点主体 | 15px |
| 默认填充 | `rgba(43,128,205,0.92)` |
| 默认描边 | `rgba(255,255,255,0.92)` |
| 标签字号 | 11px |

### 6.2 Hover 状态

- 圆点外环增强。
- 标签保持清晰，不改变面板。
- 鼠标样式为 pointer。

### 6.3 Selected 状态

- 圆点主体切换为红橙色。
- 外围增加黄色柔和光环与红色第二层光环。
- 标签底色切换为红色。
- 左侧详情面板切换到机场信息视图。
- 相关公务机列表中的航班可继续点击跳转到飞机详情。

### 6.4 显示规则

- 全球 zoom 下仅显示主要公务机运行机场。
- 区域 zoom 下显示业务机场、备降机场、FBO 重点机场。
- 城市 zoom 下可显示跑道/地面状态入口，但 V1.1 暂不实现地面图标。

## 7. 航迹与路线 Icon 规范

航迹不是传统 icon，但在交互层级上必须和飞机 marker 联动。

- 默认航迹：黄色虚线，低不透明度。
- 选中航迹：红橙色，线宽增加，不使用虚线。
- 历史轨迹：低透明度，不阻挡机场/飞机。
- 计划航线：可用更浅黄色虚线，与真实轨迹区分。
- 路线箭头：左侧详情中使用细线箭头，不使用实体飞机图标。

## 8. 顶部与地图工具 Icon 规范

| Icon | 位置 | 默认样式 | 激活/打开状态 | 交互 |
| --- | --- | --- | --- | --- |
| Search | 顶部中央搜索框左侧 | 灰色线性放大镜，18px | 输入后显示深色结果面板 | 支持航班、注册号、机场、航线搜索 |
| Account | 左上 | 白色线性用户图标，26px | 登录态可显示账户级别，但不露出第三方品牌 | 点击打开账户/权限面板 |
| Menu | 右上 | 白色线性三横线，29px | 右侧菜单打开后位置随菜单左移 | 点击开合右侧运营面板 |
| Locate | 左下/底部工具上方 | 白色准星，25px，圆形深色底 | 点击后回到默认视图 | 不请求浏览器定位权限，除非用户明确开启 |
| Settings | 底部工具栏 | 白色线性齿轮，25px | 可用淡白背景表示按下/打开 | 当前版本用于重置视图 |
| Weather | 底部工具栏 | 白色线性云图标，25px | active 时底色略亮 | 开关天气覆盖层 |
| Filters | 底部工具栏 | 白色线性漏斗，25px | active 时底色略亮，打开过滤面板 | V1.1 锁定 Business Jet |
| Close | 面板右上 | 白色线性 X，22px | hover 背景略亮 | 关闭当前面板/清空选中 |
| Chevron | 列表项右侧 | 灰白线性右箭头，18px | hover 跟随列表项高亮 | 进入相关航班/机场 |

## 9. 过滤面板 Icon 与控件规范

V1.1 过滤只允许 Business Jet 类型飞机：

- `Business Jet` 选项固定勾选并禁用。
- 禁用项背景使用低透明黄色提示“当前版本锁定”。
- 标签、航迹、机场显示可作为普通 checkbox/toggle。
- 面板底色为深灰，顶部标题区和关闭 icon 固定。
- 不允许加入额外彩色机型 icon，防止误导为支持多类型飞机。

后续版本如加入更多过滤：

- Aircraft type 使用飞机轮廓小 icon。
- Altitude 使用高度层/阶梯线 icon。
- Speed 使用速度表 icon。
- Airport status 使用机场点 + 状态圆点。
- Weather 使用云/雨/风图标。
- 每个过滤项必须有 default、selected、disabled 三态。

## 10. 左侧详情面板 Icon 规范

飞机详情面板：

- 顶部 tab：`Flight`、`Aircraft`，active 使用黄色底 + 黑字。
- 关闭 icon 位于右上，不占用 tab 语义。
- 航线模块用起飞机场代码、箭头线、到达机场代码表达。
- 飞机类型徽章使用圆形文字徽章，不放第三方飞机图片。
- 数据源可使用 badge/receiver icon，但 V1.1 只显示文本。

机场详情面板：

- Hero 区右侧使用线性机场 icon 或圆形机场符号。
- 信息结构包含城市、国家、坐标、海拔、天气、延误、起降、地面飞机、跑道。
- 相关航班列表右侧使用 chevron，点击进入飞机详情。
- 选中机场 marker 与面板标题必须同步。

## 11. 状态矩阵

| 状态 | 飞机 | 机场 | 工具按钮 | 标签 | 面板 |
| --- | --- | --- | --- | --- | --- |
| Default | 黄机 + 深描边 | 蓝点 + 白环 | 白色线性 | 深底白字 | 隐藏或静态 |
| Hover | 亮度/阴影增强 | 外环增强 | 底色微亮 | 保持显示 | 列表项高亮 |
| Active | 不适用，使用 Selected | 不适用，使用 Selected | 底色微亮或黄色强调 | 不变 | 面板打开 |
| Selected | 红橙机 + 白描边 + 红光 | 红橙点 + 黄/红光环 | 相关按钮保持 active | 红底白字 | 左侧详情打开 |
| Disabled | 不显示或低透明 | 不显示或低透明 | 40%-55% 透明 | 不显示 | 控件不可点击 |
| Loading | 可用 skeleton 或轻微透明 | 同左 | spinner/禁用 | 不显示 | 保持布局 |
| Error | 不改变地图点 | 不改变地图点 | 小型警示状态 | 不显示 | 使用错误提示文本 |

## 12. 手势与交互规则

- 单击飞机：选中飞机，打开左侧飞机详情，地图可轻微平移至可见区域。
- 单击机场：选中机场，打开左侧机场详情，地图可轻微平移至可见区域。
- 点击空白地图：V1.1 可保留当前选中；后续可配置为清空选中。
- 拖拽地图：不改变选中状态；marker 必须跟随经纬度锁定。
- 缩放地图：支持平滑缩放；飞机 marker 屏幕尺寸按 `5.3 比例尺尺寸矩阵` 控制，避免全球视图过大、机场视图过小。
- 触屏：点击热区不低于 44px；底部工具栏按钮不低于 58px 高。
- Escape：关闭过滤/搜索结果；是否关闭详情面板由产品配置决定。

## 13. 可访问性与工程约束

- 每个可点击 icon 必须有 `aria-label` 或可读文本。
- 纯装饰 icon 标记为 `aria-hidden="true"`。
- 线性工具 icon 使用 `currentColor`，方便 hover/active 统一控制。
- marker 不能依赖图片加载成功才可点击。
- 所有 hover/active 不得改变按钮外部尺寸，避免地图 UI 抖动。
- 高对比遮罩不得超过 15% 基础透明度，且必须位于 marker 下方。
- 不在生产代码中引用第三方站点未授权 icon URL。
- Gold 会员账户只用于界面观察，不作为 icon 资产复制、下载、缓存提取或再发布依据。
- 若启用 `licensed-fr24-assets`，必须先完成授权文件归档，再进入开发接入。

## 14. V1.1 落地清单

必须完成：

- 飞机 marker 使用俯视飞机剪影、黄色默认态、红橙选中态。
- 飞机按公务机类型提供 `light`、`midsize`、`super-midsize`、`long-range`、`ultra-long` 五类视觉轮廓。
- 飞机 icon 在 zoom `2.0-12.0` 范围内按 `5.3` 尺寸矩阵执行，并通过截图测量校准到参考站外接矩形误差 `±2px`。
- 飞机 marker 跟随 heading 旋转。
- 飞机 icon 默认使用 `custom-equivalent-assets`；若提供正式授权素材包，可切换为 `licensed-fr24-assets`。
- 机场 marker 默认蓝点白环，选中后红橙点 + 光环。
- 地图遮罩在底图和 marker 之间，透明度 10% 到 15%。
- 航迹默认黄色虚线，选中红橙强调。
- 顶部搜索、账户、菜单 icon 与底部设置/天气/过滤 icon 使用统一线性风格。
- 过滤面板锁定 Business Jet，其他飞机类型不出现。
- 飞机/机场点击都打开左侧详情面板，并同步 marker selected 状态。
- Google Maps 模式使用原生 marker 坐标绑定，支持拖拽和平滑缩放。

建议完成：

- hover 时临时显示 callsign 标签。
- selected marker 提升层级，避免被其他 marker 遮挡。
- 搜索结果项加入 Jet/Airport 类型标签。
- 移动端收窄搜索框并保留地图首屏可操作性。

暂不做：

- 在没有正式授权文件的情况下直接复制 Flightradar24 SVG、PNG、字体文件、缓存文件或品牌元素。
- 接入实时航班数据。
- 展示非 Business Jet 飞机类型。
- 读取会员账号信息、收藏、历史或付费内容。

## 15. 验收标准

1. 打开页面后，地图、飞机、机场、工具栏同时可见，无遮挡冲突。
2. 缩放和平移时，飞机与机场坐标不漂移。
3. 飞机 icon 在海面、陆地、城市标签上都清楚可读，并在不同 zoom 下符合 `5.3` 尺寸矩阵。
4. 选中飞机后，红橙飞机、红橙航迹、左侧详情三者同步。
5. 选中机场后，红橙机场点、红色标签、机场详情三者同步。
6. 地图灰度遮罩存在但不遮挡地图文字，透明度保持在 10% 到 15%。
7. 底部工具 icon hover/active 不造成布局位移。
8. 过滤面板只允许 Business Jet，并清楚显示锁定状态。
9. 不出现 Flightradar24 品牌露出或未授权资产引用；如使用授权 icon，必须有授权记录和 asset manifest。
10. 页面在桌面和移动端都保留最小点击热区。
